@@ -1336,7 +1336,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '134';
+$wgStyleVersion = '135';
 
 
 # Server-side caching:
