@@ -177,6 +177,10 @@ fieldset {
 	padding: 0 1em 1em;
 	line-height: 1.5em;
 }
+fieldset.nested {
+	margin: 0 0 0.5em 0;
+	padding: 0 0.5em 0.5em;
+}
 legend {
 	padding: .5em;
 	font-size: 95%;
